# voice-chatbot-agent

./: .env.example  .gitignore  README.md  colab_run.py  evaluate_asr.py  generate_audio.py  pyproject.toml  test_end_to_end.py  test_static_flow.py
app/: main.py
app/core/: config.py  tools.py
app/database/: mock_backend_data.json  mock_backend_schema.json  mock_db.py  prompts.json
app/routers/: chatbot.py  tools.py
app/schemas/: food.py  ride.py  ticket.py
app/services/: agent_service.py  asr_service.py  text_processor.py  tool_service.py
app/static/: app.js  index.html  style.css
colab/: Voice_chatbot_agent.ipynb
docs/: asr_evaluation_report.md  google_colab_guide.md  mock_backend_data_design.md  prompts_dataset.md  test_specification.md  tool_calling_specs.md  week3_asr_baseline_plan.md
tests/: test_api.py  test_mock_db.py  test_services.py
